crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/012.cypher
MATCH (n) RETURN n.name;
